<resources>
    <string name="app_name">Henri Potier</string>
    <string name="app_description">The Magic Library</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- activity main -->
    <string name="activity_main_intent_mail_title">Send mail...</string>
    <string name="activity_main_err_mail">There is no email client installed</string>

    <!-- books fragment -->
    <string name="fragment_books_title">Henri Potier Collection</string>
    <string name="menu_books_action_cart">Cart</string>
    <string name="item_book_price">%1$.2f €</string>

    <!-- cart fragment -->
    <string name="fragment_cart_title">Cart (%1$d)</string>
    <string name="item_cart_isbn">isbn : %1$s</string>
    <string name="item_cart_price">Unit price : %1$.2f €</string>
    <string name="fragment_cart_empty_text">You\'re shopping cart is empty, look our collection !</string>
    <string name="fragment_cart_button_look">Look collection</string>
    <string name="fragment_cart_button_purchase">Purchase</string>

    <!-- about fragment -->
    <string name="fragment_about_title">About</string>

    <!-- debug fragment -->
    <string name="fragment_debug_title">Debug</string>

    <!-- order summary activity -->
    <string name="activity_order_summary_title">Order summary</string>
    <string name="activity_order_summary_text_err">Error during recovering summary. Please check you\'re internet connection.</string>
    <string name="activity_order_summary_button_retry">Retry</string>
    <string name="activity_order_summary_button_return">Return</string>
    <string name="item_order_description">%1$d X %2$.2f €</string>
    <string name="item_order_total_price">%1$.2f €</string>
    <string name="item_order_footer_total_price">Total price : %1.2f €</string>
    <string name="item_order_footer_discount">Discount : %1$.2f €</string>
    <string name="item_order_footer_final_price">Final price : %1$.2f €</string>

    <!-- ConnectionErrorDialog -->
    <string name="dialog_connection_message">Get out of this backwater : you need internet connection to access the content</string>
    <string name="dialog_connection_error_retry">Retry</string>
    <string name="dialog_connection_error_quit">Quit</string>

    <!-- navigation main -->
    <string name="nav_main_item_books">Books</string>
    <string name="nav_main_item_cart">Cart</string>
    <string name="nav_main_item_about">About</string>
    <string name="nav_main_item_debug">Debug</string>

    <!-- shopping cart -->
    <string name="shopping_cart_exceed_limit">You can\'t exceed %1$d books in cart</string>

    <!-- about fragment -->
    <string name="fragment_about_developped_by">Developped by Remy Tabardel</string>

    <!-- /////////////////// STRINGS ONLY IN DEFAULT /////////////////// -->

    <!-- about fragment -->
    <string-array name="fragment_about_libs" translatable="false">
        <item>Dagger : https://google.github.io/dagger</item>
        <item>Retrofit : https://square.github.io/retrofit</item>
        <item>EventBus : https://github.com/greenrobot/EventBus</item>
        <item>ButterKnife : https://github.com/JakeWharton/butterknife</item>
        <item>Glide : https://github.com/bumptech/glide</item>
        <item>Picasso : https://github.com/square/picasso</item>
        <item>LeakCanary : https://github.com/square/leakcanary</item>
        <item>AndroidPriorityJobqueue : https://github.com/path/android-priority-jobqueue</item>
        <item>DBFlow : https://github.com/Raizlabs/DBFlow</item>
        <item>Jackson : https://github.com/FasterXML/jackson</item>
        <item>Support Palette : https://developer.android.com/reference/android/support/v7/graphics/Palette.html</item>
        <item>Support RecyclerView &amp; CardView : https://developer.android.com/training/material/lists-cards.html</item>
        <item>JUnit &amp; Espresso : https://developer.android.com/training/testing/start/index.html</item>
    </string-array>

</resources>
